--- a/HorizontalScrollView/HorizontalScrollView/Base.lproj/Main.storyboard
+++ b/HorizontalScrollView/HorizontalScrollView/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +15,63 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" ambiguous="YES" misplaced="YES" bounces="NO" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="dKO-ei-hXE">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WRA-ql-G6X">
+                                        <rect key="frame" x="8" y="8" width="584" height="584"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" ambiguous="YES" misplaced="YES" image="landscape.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="CCH-dm-f6G">
+                                                <rect key="frame" x="10" y="10" width="560" height="298"/>
+                                            </imageView>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" ambiguous="YES" misplaced="YES" text="Text View " textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="kl5-Xh-sJa">
+                                                <rect key="frame" x="10" y="316" width="564" height="260"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.92156862750000001" green="0.91764705879999997" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="CCH-dm-f6G" firstAttribute="top" secondItem="WRA-ql-G6X" secondAttribute="top" constant="10" id="Dbo-j0-goM"/>
+                                            <constraint firstItem="kl5-Xh-sJa" firstAttribute="top" secondItem="CCH-dm-f6G" secondAttribute="bottom" constant="6" id="HSg-dK-TEj"/>
+                                            <constraint firstAttribute="trailing" secondItem="kl5-Xh-sJa" secondAttribute="trailing" constant="10" id="IH6-Qp-Vcf"/>
+                                            <constraint firstAttribute="bottom" secondItem="kl5-Xh-sJa" secondAttribute="bottom" constant="8" id="PlF-MF-To6"/>
+                                            <constraint firstItem="kl5-Xh-sJa" firstAttribute="leading" secondItem="WRA-ql-G6X" secondAttribute="leading" constant="10" id="iY4-Fo-6pO"/>
+                                            <constraint firstItem="CCH-dm-f6G" firstAttribute="leading" secondItem="WRA-ql-G6X" secondAttribute="leading" constant="10" id="jmA-5S-TFu"/>
+                                            <constraint firstAttribute="trailing" secondItem="CCH-dm-f6G" secondAttribute="trailing" constant="10" id="u2e-T6-2rG"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="WRA-ql-G6X" firstAttribute="top" secondItem="dKO-ei-hXE" secondAttribute="top" constant="8" id="4Ku-Ta-ho2"/>
+                                    <constraint firstAttribute="height" constant="600" id="GSR-uw-ddK"/>
+                                    <constraint firstItem="WRA-ql-G6X" firstAttribute="leading" secondItem="dKO-ei-hXE" secondAttribute="leading" constant="8" id="PW0-cO-1TT"/>
+                                    <constraint firstAttribute="trailing" secondItem="WRA-ql-G6X" secondAttribute="trailing" constant="8" id="cm9-Ze-ZX3"/>
+                                    <constraint firstAttribute="bottom" secondItem="WRA-ql-G6X" secondAttribute="bottom" constant="8" id="e0j-Rb-5V0"/>
+                                    <constraint firstAttribute="width" constant="600" id="paq-EY-cA5"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="ContainerView" destination="WRA-ql-G6X" id="hqZ-gj-rJg"/>
+                        <outlet property="imageView" destination="CCH-dm-f6G" id="1sX-gi-Tx3"/>
+                        <outlet property="scrollView" destination="dKO-ei-hXE" id="60y-ah-ibC"/>
+                        <outlet property="textView" destination="kl5-Xh-sJa" id="KL5-1n-Hrw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="192" y="265"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="landscape.jpg" width="1024" height="768"/>
+    </resources>
 </document>
